# agent-forge

./: .env.example  .gitignore  AGENTS.md  README.md  permissions.yaml  pyproject.toml
.github/workflows/: deploy-docs.yml
.opencode/agents/: code-reviewer.md  orchestrator.md  py-adapter.md  py-backend.md  react-frontend.md  spec-reviewer.md
docs/superpowers/: session-handoff-agent-platform.md
docs/superpowers/plans/: 2026-06-26-agent-platform-phase1.md
docs/superpowers/specs/: 2026-06-26-agent-platform-phase1-spec.md  2026-06-26-agent-platform-phase2-spec.md  (+6 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: check-no-js.mjs
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/pages/: Account.tsx  (+41 more)
src/: main.py
src/infra/: settings.py
src/runtime/: abc.py  models.py
src/utils/: slugify.py
tests/: conftest.py  test_abc.py  test_adapters.py  test_agent_copy.py  test_agent_mcp_binding.py  test_agent_registry.py  test_agents.py  test_api_keys.py  test_audit.py  test_auth.py  test_chat_session_model.py  test_checkpoint.py  test_db.py  test_deepagents_adapter.py  test_default_workspace.py  test_direct_llm.py  test_email.py  test_gateway.py  test_guardrails.py  test_harness_api.py  test_harness_runtime.py  test_hooks.py  test_imports.py  test_invitations.py  test_langgraph_shims.py  test_max_tokens_wire.py  test_mcp.py  test_memory.py  test_model_catalog.py  test_model_pricing.py  test_models.py  test_prompt.py  test_rbac.py  test_retry.py  test_routes_admin.py  test_routes_admin_v2.py  test_routes_audit.py  test_routes_auth.py  test_routes_me.py  test_routes_observability.py  (+21 more)
website/: README.md  index.md  package-lock.json  package.json
website/.vitepress/: config.mts
website/guide/: api-reference.md  architecture.md  configuration.md  deployment.md  getting-started.md  rbac.md
(+100 files in other folders)
