[project]
name = "agent-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "authlib>=1.3",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    # Phase 3a: real MCP protocol client (SSE / Streamable HTTP / stdio).
    "mcp>=1.0",
    # Phase 4: deepagents adapter (spec D4 pins 0.6.12).
    # langgraph/langchain pinned to match deepagents 0.6.12's requirements:
    # deepagents 0.6.12 → langchain 1.3.11 → langgraph >=1.2.5,<1.3.0
    "deepagents==0.6.12",
    "langgraph>=1.2.5,<1.3.0",
    "langchain>=1.3.11,<2.0",
    "langchain-openai>=0.3",
    "langchain-core>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
